testdata/baselines/reference/submodule/conformance/typedefCrossModule2.errors.txt
mod1.js(3,23): error TS2300: Duplicate identifier 'Foo'.
mod1.js(4,7): error TS2300: Duplicate identifier 'Foo'.
mod1.js(10,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
use.js(6,15): error TS18048: 'mod.Baz' is possibly 'undefined'.


==== use.js (1 errors) ====
    var mod = require('./mod1.js');
    /** @type {import("./mod1.js").Baz} */
    var b;
    /** @type {mod.Baz} */
    var bb;
    var bbb = new mod.Baz();
                  ~~~~~~~
!!! error TS18048: 'mod.Baz' is possibly 'undefined'.
    
==== mod1.js (3 errors) ====
    // error
    
    /** @typedef {number} Foo */
                          ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
    class Foo { } // should error
          ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
    
    /** @typedef {number} Bar */
    exports.Bar = class { }
    
    /** @typedef {number} Baz */
    module.exports = {
    ~~~~~~~~~~~~~~~~~~
        Baz: class { }
    ~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    
    // ok
    
    /** @typedef {number} Qux */
    var Qux = 2;
    
    /** @typedef {number} Quid */
    exports.Quid = 2;
    
    /** @typedef {number} Quack */
    module.exports = {
        Quack: 2
    }
    